<resources>
    <string name="app_name">Tiny Planet System</string>
    <string name="approximation_title">Approximation method:</string>

    <string name="planets_setup">Planets setup</string>
    <string name="approximation_method">Approximation method</string>
    <string name="sampling_setup">Sampling setup</string>

    <string name="beeman">Beeman</string>
    <string name="euler">Euler</string>
    <string name="euler_cramer">Euler-Cramer</string>
    <string name="verlet">Verlet</string>

    <string-array
        name="methods">
        <item>Beeman</item>
        <item>Euler</item>
        <item>Euler-Cramer</item>
        <item>Verlet</item>
    </string-array>

    <string-array
        name="methods_info">
        <item>This scheme stores energy better.</item> <!-- Beeman -->
        <item>The best to use.</item> <!-- Euler -->
        <item>This method generates stable solutions for oscillatory processes.</item> <!-- Euler-Cramer -->
        <item>The disadvantage of the algorithm is that it is not self-starting.</item> <!-- Verlet -->
    </string-array>

    <string name="next">Next</string>
    <string name="formula">Method formula</string>

    <string name="planet_name">Planet Name</string>
    <string name="planet_mass">Mass</string>
    <string name="planet_x">X</string>
    <string name="planet_y">Y</string>
    <string name="planet_z">Z</string>
    <string name="planet_color">Planet color</string>
    <string name="planet_distance">Planet distance</string>
    <string name="planet_velocity">Planet velocity</string>

    <string name="scheme_time_step">Time step in seconds</string>
    <string name="scheme_delay">Scheme delay in milliseconds</string>

    <string name="must_be_number">Please input number</string>

    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>

    <string name="days_per_second">%.2f days per second</string>
    <string name="years_passed">Year: %.2f</string>

    <string name="resume_model">Resume model</string>
    <string name="new_model">New model</string>

    <string name="show_names">Show names</string>
    <string name="show_physics">Show physics</string>
    <string name="show_paths">Show paths</string>
    <string name="show_zoom">Show zoom</string>

    <string name="calc_auto">Auto</string>

    <string name="sun">Sun</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>

    <string name="menu_all_coordinates">XYZ velocity</string>

    <string name="time_to_update">It`s time to update!</string>
    <string name="update_message">Your app update is ready. Install?</string>
    <string name="install">Install</string>
    <string name="later">Later</string>
</resources>
